--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap');
 
-
 body {
   /* font-family: 'Bebas Neue', cursive; */
   font-family: 'Roboto', sans-serif;
@@ -18,6 +17,9 @@ body {
   font-weight: 500;
 }
 
+.penguin-fw-700 {
+  font-weight: 700;
+}
 .penguin-btn-gradient-green {
   background: linear-gradient(180deg, #A4BC46 0%, #85A019 100%);
 }
@@ -39,6 +41,14 @@ body {
   font-size: 5rem;
 }
 
+.penguin-fs-3 {
+  font-size: 3rem;
+}
+
+.penguin-fs-1-5 {
+  font-size: 1.5rem;
+}
+
 .penguin-lh-6 {
   line-height: 6rem;
 }
@@ -49,4 +59,24 @@ body {
 
 .penguin-heading-black {
   color: #363958;
+}
+
+.penguin-bg-ash {
+  background-color: #F1F1F1;
+}
+
+.penguin-m-card {
+  margin: 1.1rem auto;
+}
+
+.penguin-p-card {
+  padding: 1rem;
+}
+
+.penguin-py-card {
+  padding: 0 0.4rem;
+}
+
+.penguin-w-90 {
+  width: 90%;
 }
