--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,11 @@ body {
 .penguin-w-90 {
   width: 90%;
 }
+
+
+@media only screen and (max-width: 576px) {
+  .penguin-fs-5 {
+    font-size: 4rem;
+  }
+
+}
